<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="14dp">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="left|fill_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/server_host_login"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle" />

            <EditText
                android:id="@+id/serverHostInput"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/default_host" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/server_port_login"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle" />

            <EditText
                android:id="@+id/portNumberInput"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned"
                android:text="@string/default_port" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:gravity="right"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/username_login"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle" />

            <EditText
                android:id="@+id/usernameInput"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/default_username" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:gravity="right"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/password_login"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:text="@string/default_password" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:gravity="right"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/first_name_login"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle" />

            <EditText
                android:id="@+id/firstNameInput"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:gravity="right"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/last_name_login"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle" />

            <EditText
                android:id="@+id/lastNameInput"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email_login"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionMode.Subtitle" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gender"
                android:layout_width="0dp"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gender_login"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionMode.Subtitle" />
            <RadioGroup
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:text="@string/male_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/male"/>
                <RadioButton
                    android:text="@string/female_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/female"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="220dp"
            android:layout_height="60dp">

            <Button
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:text="@string/sign_in_button" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:text="@string/register_button" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>